Adapt test to missing AutoClosable etc.